welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: ')' expected but 'return' found.
if (Math.abs(a-10)<Math.abs(b-10) return a
                                  ^close10:3: error: ';' expected but 'if' found.
if (Math.abs(a-10)>Math.abs(b-10) return b
^